Mon Nov  4 01:26:13 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c (window_menu_help_manual_activate_cb): search for
	"gnome-mud-manual", not "gnome-mud". Thanks, Kevin Ryde.

Tue Oct 29 20:12:21 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* Upgrade to GNU gettext 0.11.5.
	* configure.ac: add AM_GNU_GETTEXT_VERSION(0.11.5) for autopoint.

	* .cvsignore: add mkinstalldirs.

Tue Oct 29 19:47:13 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/telnet.c, src/window.c: patch from
	Abigail Brady <morwen@evilmagic.org> which fixes the handling of a
	few telnet codes + minor cleanups.

Mon Oct 28 19:19:49 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: lots of cleanups. Temporarily remove the debug stuff.
	Add checks for getaddrinfo and getnameinfo and a configure. Better
	zlib check.
	* Makefile.am (CFLAGS): removed definition.
	* src/Makefile.am (CFLAGS): removed definition.
	(gnome_mud_LDADD): add $(Z_LIBS).

Mon Oct 28 17:09:16 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* AUTHORS: change contact info for Abigail, per request.

Wed Sep 11 00:36:44 CEST 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/net.c: Patch from Sjoerd Simons <sjoerd@beast.luon.net>
	which adds IPv6 support.  Woohoo!

	* ROADMAP: added IPv6 to 0.10.
	* NEWS: add 0.10.0 items.

Thu Aug  1 16:41:01 CEST 2002  Jordi Mallach  <jordi@sindominio.net>

	* Move to autoconf 2.50.

	* configure.in: renamed to configure.ac.
	* configure.ac: changes for autoconf 2.52, and remove some old
	stuff.
	* acclocal.h: removed, included templates in configure.ac.
	* autogen.sh: fail if one command returns error.

Tue Jul 30 10:59:36 CEST 2002  Jordi Mallach  <jordi@sindominio.net>

	* po/Makevars: set Copyright holder to Robin.

Sat Jul  6 02:07:31 CEST 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/python.c (python_init): changed search path of python modules
	to "~/.gnome-mud/plugins/".

Wed Jul  3 17:20:32 CEST 2002  Jordi Mallach  <jordi@sindominio.net>