@@ -616,6 +616,11 @@ static void window_menu_help_manual_activate_cb(GtkMenuItem *menuitem)
 	gnome_help_goto(NULL, "ghelp:gnome-mud-manual");
 }
 
+static void window_menu_plugin_api_manual_activate_cb(GtkMenuItem *menuitem)
+{
+	gnome_help_goto(NULL, "ghelp:gnome-mud-plugin-api");
+}
+
 static GnomeUIInfo toolbar_menu[] = {
   GNOMEUIINFO_ITEM_STOCK(N_("Wizard..."), NULL, window_profiles,   GNOME_STOCK_PIXMAP_NEW),
   GNOMEUIINFO_SEPARATOR,
@@ -668,6 +673,10 @@ static GnomeUIInfo help_menu[] = {
 	{ GNOME_APP_UI_ITEM, N_("GNOME-Mud _manual"), N_("Open the GNOME-Mud manual"), 
 		window_menu_help_manual_activate_cb, NULL, NULL,
 		GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_BOOK_BLUE, 0, 0, NULL 
+	},
+	{ GNOME_APP_UI_ITEM, N_("GNOME-Mud _plugin API"), N_("Open the GNOME-Mud plugin API manual"),
+		window_menu_plugin_api_manual_activate_cb, NULL, NULL,
+		GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_BOOK_BLUE, 0, 0, NULL
 	},
 	GNOMEUIINFO_MENU_ABOUT_ITEM(window_menu_help_about, NULL),
 	GNOMEUIINFO_END
